# AVoCaDO

./: .gitignore  caption_clip.py  detect_and_clip.py  download_movies.py  pyproject.toml  search_movies.py
